--- a/test/index.html
+++ b/test/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <title>My Tiptap Wrapper Test</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+    }
+  </style>
 </head>
 <body>
   <div id="editor"></div>
