fixed the form submit issue for the buttons.

--- a/test/index.html
+++ b/test/index.html
@@ -20,6 +20,10 @@
       const myEditor = new SampaadakEditor.default(editorElement, {
         content: '<p>Initial content</p>'
       });
+
+      //myEditor.content = '<p>Changed content</p>';
+
+      myEditor.setContent('<p>Changed content again .... </p>');
     });
   </script>
 </body>
