--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div id="editor"></div>
-  <script src="./dist/bundle.js"></script>
+  <script src="./dist/bundle.js?v=1"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const editorElement = document.getElementById('editor');
