changed the title of the demo site

--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Tiptap Wrapper Test</title>
+  <title>Sampaadak Editor Demo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
@@ -19,10 +19,6 @@
       const myEditor = new SampaadakEditor.default(editorElement, {
         content: '<p>Initial content</p>'
       });
-
-      //myEditor.content = '<p>Changed content</p>';
-
-      myEditor.setContent('<p>Changed content again .... </p>');
     });
   </script>
 </body>
